--- a/16-base-jwt-axios-interceptors/api-base-jwt-axios-interceptors-trungquandev/.babelrc
+++ b/16-base-jwt-axios-interceptors/api-base-jwt-axios-interceptors-trungquandev/.babelrc
@@ -4,9 +4,6 @@
  * "A bit of fragrance clings to the hand that gives flowers!"
  */
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": [
-    ["@babel/transform-runtime"],
-    ["module-resolver", { "alias": { "~": "./src" } }]
-  ]
+	"presets": ["@babel/preset-env"],
+	"plugins": [["@babel/transform-runtime"], ["module-resolver", { "alias": { "~": "./src" } }]]
 }
